# graphql-sdl-parser

./: README.md  conflict.txt  dune  esy.json
esy.lock/: index.json
lib/: ast.re  bin.re  dune  graphql_schema_lexer.mll  graphql_schema_parser.mly  graphql_sdl_parser.re  lexer.mll  parser.mly  parserMessages.messages
test/: Test.re  dune
