(library
 (name graphql_sdl_parser)
 (public_name graphql-sdl-parser)
 (libraries graphql yojson menhirLib))

(ocamllex graphql_schema_lexer)

(menhir
 (modules graphql_schema_parser)
 (flags --explain --table))

(rule
 (targets graphql_sdl_parser_messages.ml)
 (deps parserMessages.messages graphql_schema_parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))
